force-app/main/default/objects/Customer_Price__c/Customer_Price__c.object-meta.xml
<CustomObject>
    <label>Customer Price</label>
    <pluralLabel>Customer Prices</pluralLabel>
    <nameField>
        <type>AutoNumber</type>
        <label>Customer Price Number</label>
        <displayFormat>CP-{00000}</displayFormat>
    </nameField>
    <sharingModel>Private</sharingModel>
    <description>Per-customer negotiated price override for a specific Product2, time-bounded. Highest precedence in the PricingService cascade (override > tier > base). OWD Private. See ADR-0002.</description>
</CustomObject>