force-app/main/default/objects/Customer_Price__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <type>Lookup</type>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Customer Prices</relationshipLabel>
    <relationshipName>Customer_Prices</relationshipName>
    <required>true</required>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The customer this price override applies to. See ADR-0002.</description>
</CustomField>