force-app/main/default/objects/Customer_Price__c/fields/Negotiated_By__c.field-meta.xml
<CustomField>
    <fullName>Negotiated_By__c</fullName>
    <label>Negotiated By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Negotiated Customer Prices</relationshipLabel>
    <relationshipName>Negotiated_Customer_Prices</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Sales rep who negotiated this override. Also drives record ownership for sharing (ADR-0007). See ADR-0002.</description>
</CustomField>