force-app/main/default/objects/Customer_Price__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <label>Notes</label>
    <type>LongTextArea</type>
    <length>2000</length>
    <description>Context for the negotiated price. See ADR-0002.</description>
</CustomField>