force-app/main/default/objects/Customer_Price__c/fields/Override_Price__c.field-meta.xml
<CustomField>
    <fullName>Override_Price__c</fullName>
    <label>Override Price</label>
    <type>Currency</type>
    <precision>16</precision>
    <scale>2</scale>
    <required>true</required>
    <description>The negotiated unit price for this customer/product. See ADR-0002.</description>
</CustomField>