force-app/main/default/objects/Customer_Price__c/fields/Product2__c.field-meta.xml
<CustomField>
    <fullName>Product2__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Customer Prices</relationshipLabel>
    <relationshipName>Customer_Prices</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The product variant whose price is overridden. NOTE: not required + SetNull because Product2 cannot be the parent of a cascade/restrict lookup, and required lookups demand cascade/restrict — so lookups to Product2 cannot be required at the schema level. Population enforced by app logic. See ADR-0002 materialization finding.</description>
</CustomField>